2000-06-19  Ettore Perazzoli  <ettore@helixcode.com>

	* gtkhtml.c (load_keybindings): Map shift+backspace to
	`DELETE_BACK'.

2000-06-19  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine-edit-delete.c (html_engine_delete_selection): Update
	the selection before deleting it.

	* htmlengine-edit-copy.c (html_engine_copy): Update the selection
	before copying.
	(html_engine_copy_to_buffer): Likewise.

	* keybindingsrc.emacs: Bind "cut-line" to "<Ctrl>k".

	* gtkhtml-properties.c: Add a "cut-line" command and bind it as
	`GTK_HTML_COMMAND_CUT_LINE'.

	* gtkhtml.c (command): Handle `GTK_HTML_COMMAND_CUT_LINE'.

	* gtkhtml.h: New command `GTK_HTML_COMMAND_CUT_LINE'.

	* gtkhtml-keybinding.c (cut_line): New.

	* htmlengine-edit-cut.c (html_engine_cut): Update the selection
	before doing anything.
	(html_engine_cut_line): New.

	* gtkhtml.c (load_keybindings): Load the keybindings from
	$(prefix)/share/gtkhtml instead of using the gnome_datadir.

2000-06-18  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine.c (html_engine_set_editable): Bring the cursor home
	only after ensuring the thing is actually editing-compatible
	[i.e., after calling `ensure_editable()'].

2000-06-17  Ettore Perazzoli  <ettore@helixcode.com>

	* gtkhtml.c (gtk_html_set_editable): If the widget has become
	editable, update the styles with `update_styles()'.
	(gtk_html_begin): Added precondition: @html is not editable.

	* gtkhtml.c (command): Delete the selection appropriately for
	`COMMAND_INSERT_PARAGRAPH', `COMMAND_DELETE',
	`COMMAND_DELETE_BACK'.
	(selection_received): Delete the selection before inserting.
	(key_press_event): Likewise.

	* htmlengine-edit-delete.c (html_engine_delete_selection): New.

2000-06-16  Radek Doulik  <rodo@helixcode.com>

	* gtkhtml.c: moved enum some defs to gtkhtml-properties.c + some
	minor keybindings changes

2000-06-14  Larry Ewing  <lewing@helixcode.com>

	* htmliframe.c (html_iframe_init): place the widget offscreen