@@ -34,5 +34,3 @@ binding "gtkhtml-bindings-ms"
   bind "<Ctrl><Alt>2"       { "command" (style-itemroman) }
   bind "<Ctrl><Alt>3"       { "command" (style-itemdigit) }
 }
-
-class "GtkHTML" binding "gtkhtml-bindings-ms"
