@@ -1,3 +1,14 @@
+2000-06-19  Radek Doulik  <rodo@helixcode.com>
+
+	* gtkhtml.c (clean_bindings_set): I must clean all 3 possible
+	binding_set's - this maybe fixed by adding new functions to gtk
+	(load_keybindings): now it could load custom bindings
+
+	* keybindingsrc.emacs: same as below
+
+	* keybindingsrc.ms: removed binding to GtkHTML class, done in
+	gtkhtml.c now
+
 2000-06-19  Ettore Perazzoli  <ettore@helixcode.com>
 
 	* gtkhtml.c (load_keybindings): Map shift+backspace to
